# clerical

./: .dir-locals.el  .gitignore  .merlin  LICENSE.md  Makefile  README.md  _tags  clerical.opam  dune-project  prelude.real
doc/: syntax.md
examples/: abs.real  amb.real  e.real  guards.real  integral.real  localState.real  nestedGuards.real  parallel.real  parallelAssign.real  pi.real  power.real  recursion.real  trisection.real
formalization/: Clerical.v  Delay.v  Examples.v  Koreal.v  Makefile  OperationalSemantics.v  Semantics.v  Typing.v  _CoqProject
formalization/clerical/: Clerical.v  Nondeterminism.v  Semantics.v  Typing.v  real.v
lib/: build.ml  clerical.ml  desugar.ml  error.ml  eval.ml  fiber.ml  input.ml  input.mli  parser.mly  print.ml  real.ml  runtime.ml  test_rounding.ml  toplevel.ml  typecheck.ml  ulexbuf.ml  value.ml
lib/parsing/: dune  input.ml  input.mli  lexer.ml  parser.mly  ulexbuf.ml  ulexbuf.mli
lib/reals/: dune  dyadic.ml  real.ml
lib/runtime/: config.ml  config.mli  dune  eval.ml  external.ml  fiber.ml  parallel.ml  run.ml  toplevel.ml  value.ml
lib/typing/: desugar.ml  dune  syntax.ml  type.ml  typecheck.ml
lib/util/: dune  error.ml  location.ml
src/: .merlin  clerical.ml  config.ml  config.mli  desugar.ml  dune  dyadic.ml  dyadic_bignum.ml  dyadic_mpfr.ml  dyadic_zarith.ml  eval.ml  external.ml  fiber.ml  input.ml  input.mli  interval.ml  legacy_fiber.ml  lexer.ml  location.mli  parser.mly  print.mli  real.ml  runtime.ml  syntax.ml  toplevel.ml  type.ml  typecheck.ml  ulexbuf.ml  value.ml
test/: dune
test/basic.t/: run.t  (+7 more)
